competicao ativo troca image clube

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,17 @@
 
 <section class="content">
   <div  class="jumbotron welcome-jumbotron" style="height: 600px;">
-      <h1>Bem vindo ao Chutes FutMesa!</h1>
-      <h1>O site de inscrição da Federação Paulista de Futebol de Mesa!</h1>
+
+    <div class="row">
+      <div class="col-sm-4 col-xs-4">&nbsp;</div>
+      <div class="col-sm-7 col-xs-7">
+        <!-- <img src="/assets/images/icons/jogo1.png" class="mr-2" style="width: 20px; color: white;"> -->
+        <img src="/assets/images/fotosCompeticoes/torneiodasinho2022.jpg" class="mr-2" style="height: 400px; color: white;">
+      </div>
+    </div>
+    
+      <!-- <h1>Bem vindo ao Chutes FutMesa!</h1>
+      <h1>O site de inscrição da Federação Paulista de Futebol de Mesa!</h1> -->
       <!-- <p *ngIf="blnLogado == false" >Quer jogar com a gente? Cadastre- se agora !! </p>
       <p *ngIf="blnLogado == true" >Começe jogar agora !! </p>
       <a *ngIf="blnLogado == false" class="btn btn-primary btn-lg" [routerLink]="['/login']"> Entre Aqui</a>
