--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -169,7 +169,8 @@
                         &nbsp;
                     </div>
                     <div class="col-sm-8 col-xs-8">
-                        <button (click)="SalvarUsuario(usuarioForm.value)"type="button" class="btn btn-primary pull-right btn-block" [disabled]="!usuarioForm.valid" >
+                        <!-- <button (click)="SalvarUsuario(usuarioForm.value)"type="button" class="btn btn-primary pull-right btn-block" [disabled]="!usuarioForm.valid" > -->
+                        <button (click)="SalvarUsuario(usuarioForm.value)"type="button" class="btn btn-primary pull-right btn-block"  >
                             <i class="fa fa-save"></i> Salvar
                         </button>
                     </div>
